Fixed the images for the events and made the video area blurred

--- a/styles/components/hero.styl
+++ b/styles/components/hero.styl
@@ -27,6 +27,7 @@ video
   display inline-block
   vertical-align baseline
   transform translateX(-50%) translateY(-50%)
+  -webkit-filter blur(5px)
 
 .home-hero
   margin-top -114px
